--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
